--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <h2>Kaarten</h2>
     <div class="card-grid">
       <article class="card" tabindex="0" role="button">
-        <img src="/afbeelding/yoga.jpg" alt="Beschrijving van de afbeelding" class="card-image" />
+        <img src="afbeelding/yoga.jpg" alt="Beschrijving van de afbeelding" class="card-image" />
         <div class="card-content">
           <h3>Titel 1</h3>
           <h4 class="card-subtitle">Subtitel</h4>
@@ -94,7 +94,7 @@
       </article>
   
       <article class="card" tabindex="0" role="button">
-        <img src="/afbeelding/yoga.jpg" alt="Beschrijving van afbeelding 2" class="card-image" />
+        <img src="afbeelding/yoga.jpg" alt="Beschrijving van afbeelding 2" class="card-image" />
         <div class="card-content">
           <h3>Titel 2</h3>
           <h4 class="card-subtitle">Subtitel</h4>
@@ -107,7 +107,7 @@
       </article>
 
       <article class="card" tabindex="0" role="button">
-        <img src="/afbeelding/yoga.jpg" alt="Beschrijving van afbeelding 2" class="card-image" />
+        <img src="afbeelding/yoga.jpg" alt="Beschrijving van afbeelding 2" class="card-image" />
         <div class="card-content">
           <h3>Titel 3</h3>
           <h4 class="card-subtitle">Subtitel</h4>
@@ -120,7 +120,7 @@
       </article>
 
       <article class="card" tabindex="0" role="button">
-        <img src="/afbeelding/yoga.jpg" alt="Beschrijving van afbeelding 2" class="card-image" />
+        <img src="afbeelding/yoga.jpg" alt="Beschrijving van afbeelding 2" class="card-image" />
         <div class="card-content">
           <h3>Titel 4</h3>
           <h4 class="card-subtitle">Subtitel</h4>
@@ -133,7 +133,7 @@
       </article>
 
       <article class="card" tabindex="0" role="button">
-        <img src="/afbeelding/yoga.jpg" alt="Beschrijving van afbeelding 2" class="card-image" />
+        <img src="afbeelding/yoga.jpg" alt="Beschrijving van afbeelding 2" class="card-image" />
         <div class="card-content">
           <h3>Titel 5</h3>
           <h4 class="card-subtitle">Subtitel</h4>
