--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Toegankelijke Componenten</title>
+  <title>Componenten</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
-  <h1>Toegankelijke UI-componenten</h1>
+  <h1>Gebruiksvriendelijke en Toegankelijke Componenten</h1>
   <p>Op deze pagina worden veelgebruikte interfacecomponenten getoond met uitleg over de richtlijnen en principes voor toegankelijkheid en gebruiksvriendelijkheid.</p>
 
   <section id="knoppen">
