--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <i class="fa-solid fa-bars"></i>
         </button>
         <div class="nav-links">
-          <a href="componenten.html" aria-current="page">Home</a>
+          <a href="index.html" aria-current="page">Home</a>
           <a href="#">Overzicht</a>
           <a href="#">Informatie</a>
           <a href="#">Contact</a>
