--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <p>Toegepaste Richtlijnen:
       <ul>
         <li>Gebruik van aria-label voor betekenis.</li>
-        <li>Niet alleen kleur, maar ook tekst of tooltip voor context.</li>
+        <li>Niet alleen kleur, maar ook tooltip voor context.</li>
       </ul>
     </p>
   </section>
