--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 
   <section id="knoppen">
     <h2>Knoppen</h2>
-    <button class="primary">Bewerken</button>
-    <button class="secondary">Opslaan</button>
-    <button class="danger">Verwijderen</button>
-    <button class="icon-button" aria-label="home">
+    <div class="button-group">
+      <button class="primary">Bewerken</button>
+      <button class="secondary">Opslaan</button>
+      <button class="danger">Verwijderen</button>
+      <button class="icon-button" aria-label="home">
         <i class="fa-solid fa-house"></i>
-    </button>
+      </button>
+    </div>
     <p>Toegepaste Richtlijnen: 
       <ul aria-live="polite">
         <li>Volledig bedienbaar met toetsenbord (Tab, Enter, Spatie) door &lt;button&gt;-element </li>
