--- a/zoekresultaten.html
+++ b/zoekresultaten.html
@@ -22,32 +22,32 @@
       {
         titel: "Knoppen",
         beschrijving: "Toegankelijke knoppen met toetsenbordbediening, ARIA-labels en juiste contrastverhoudingen.",
-        link: "componenten.html#knoppen"
+        link: "index.html#knoppen"
       },
       {
         titel: "Navbar",
         beschrijving: "Een toegankelijke navigatiebalk met aria-current, duidelijke structuur en toetsenbordbediening.",
-        link: "componenten.html#navbar"
+        link: "index.html#navbar"
       },
       {
         titel: "Zoekbalk",
         beschrijving: "Een toegankelijke zoekfunctie met verborgen label, toetsenbordondersteuning en contrast.",
-        link: "componenten.html#zoekbalk"
+        link: "index.html#zoekbalk"
       },
       {
         titel: "Kaarten",
         beschrijving: "Focusbare, semantisch correcte informatieve kaarten met artikelstructuur.",
-        link: "componenten.html#kaarten"
+        link: "index.html#kaarten"
       },
       {
         titel: "Filters",
         beschrijving: "Toegankelijke filters met fieldset, legend en checkboxen met labels.",
-        link: "componenten.html#filters"
+        link: "index.html#filters"
       },
       {
         titel: "Iconen",
         beschrijving: "Iconen met betekenisvolle aria-labels en ondersteuning voor screenreaders.",
-        link: "componenten.html#iconen"
+        link: "index.html#iconen"
       }
     ];
 
