--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
       <ul>
         <li>Voldoende ruimte tussen elementen.</li>
         <li>Toegankelijk via screenreaders en toetsenbord.</li>
-        <li>Duidelijke labels bij checkboxen.</li>
+        <li>Heldere structuur met &lt;ul&gt; en &lt;li&gt;.</li>
+        <li>Responsief gedrag.</li>
       </ul>
     </p>
   </section>
